# vimages

./: .gitignore  README.md  changelog.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  server.rs
src-tauri/src/endpoints/: cache.rs  fs.rs  mod.rs  runtime.rs  types.rs
src-tauri/src/fs_io/: error.rs  mod.rs  ops.rs  ops_types.rs  regex.rs  types.rs
src-tauri/src/img_cache/: cache.rs  hash.rs  img.rs  mod.rs  queue.rs  queue_worker.rs
src-tauri/src/ipc/: mod.rs  send.rs  types.rs
src-tauri/src/journal/: database.rs  database_delete.rs  database_get_records.rs  database_get_stats.rs  database_insert.rs  database_update.rs  mod.rs  types.rs
src-tauri/src/user_config/: mod.rs  types.rs  vimages_config.rs
src/components/: FileBrowser.tsx  FilesystemBrowser.module.css  FilesystemBrowser.tsx  HelpOverlay.tsx  Image.tsx  Navbar.module.css  Navbar.tsx  Titlebar.module.css  Titlebar.tsx  Vimage.module.css  Vimage.tsx  VimageFullscreen.tsx  VimageGrid.tsx  common.module.css  utility.general.ts  utility.styling.ts
src/components/eventhandlers/: keyboard.ts
src/components/fs/: dir.browser.main.tsx  dir.browser.parent.tsx  dir.browser.preview.tsx  dir.browser.tsx  fs.module.css
src/components/img/: img.browser.tsx  img.fullscreen.tsx  img.grid.tsx  img.module.css  img.tsx
src/context/: AppContext.tsx  AppContextStore.actions.ts  AppContextStore.ts  CommandCursorHandler.ts  ContextTypes.ts  NavigableItem.tsx  NavigationContext.tsx  NavigationContextStore.ts  NavigationContextTypes.ts  context.types.ts  helpers.ts  store.ts  vimagesCtx.tsx
src/context/ModeHandlers/: CommandModeHandler.ts  InsertModeHandler.ts  NormalModeHandler.ts  VisualModeHandler.ts
src/context/api/: axum.img.actions.ts
src/context/app/: app.config.actions.ts  app.context.actions.ts  (+5 more)
src/filesystem/: Files.ts  FilesystemBrowser.module.css  FilesystemBrowser.tsx  RustApiBridge.ts
src/keyboard/: Command.ts  Helpers.ts  InputParsers.ts  KeyboardModule.ts  KeyboardTypes.ts
(+42 files in other folders)
