[package]
name = "vimages"
version = "0.1.6"
description = "A Tauri App"
authors = ["cfsen"]
edition = "2021"

[profile.dev]
incremental = true
opt-level = 0
debug = true

[profile.release]
codegen-units = 1 # LLVM opti
lto = true # link-time-opti
opt-level = 3 # prioritize speed
panic = "abort" # disable panic handlers
strip = true # remove debug symbols

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vimages_lib"
# crate-type = ["staticlib", "cdylib", "rlib"] 
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25.6"
sha2 = "0.10.9"
dirs = "6.0.0"
tokio = "1.45.1"
axum = "0.8.4"
mime_guess = "2.0.5"
log = "0.4.27"
env_logger = "0.11.8"
tauri-plugin-os = "2"
sqlite = "0.37.0"
